Updated to 1.8.1 (by updates_builder)

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
+removed_sources:
+  event-0.9.1.tar.bz2: 45132331826bb9e8fe0baf7853f19039577efce9
 sources:
-  "event-0.9.1.tar.bz2": 45132331826bb9e8fe0baf7853f19039577efce9
+  event-1.8.1.tgz: 7a1eb3785ec1d43bf109cd63f17942f442bbeeed
